Update structured data description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       "url": "https://zodtech.kz/",
       "logo": "https://zodtech.kz/assets/images/image.png",
       "image": "https://zodtech.kz/assets/images/image.png",
-      "description": "Developing high-end IT solutions, websites, and applications for business growth worldwide.",
+      "description": "Build. Scale. Drive. | Zodtech",
       "telephone": "+77002174701",
       "address": {
         "@type": "PostalAddress",
